--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.png">
     <title>ITR India - Utilities</title>
     <style>
         body {
@@ -57,6 +59,24 @@
 
         h3 {
             margin-bottom: 10px;
+        }
+
+        footer {
+            background-color: #333;
+            color: #fff;
+            padding: 20px;
+            text-align: center;
+            font-size: 14px;
+            font-family: Arial, sans-serif;
+        }
+        footer p {
+            margin: 0;
+        }
+        footer p a {
+            color: #f35a5a;
+        }
+        footer p a:hover {
+            color: #58f172;
         }
     </style>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -142,6 +162,10 @@
             </div>
         </div>
     </div>
+
+    <footer>
+        <p>This ITR Utility is built by: <a href="https://splk.in">Vatsal Jagani</a></p>
+    </footer>
 
     <script>
         function setResult(formNo) {
