--- a/index.html
+++ b/index.html
@@ -62,11 +62,15 @@
         }
 
         footer {
+            position: fixed;
+            left: 0;
+            bottom: 0;
+            width: 100%;
             background-color: #333;
             color: #fff;
             padding: 20px;
             text-align: center;
-            font-size: 14px;
+            font-size: 16px;
             font-family: Arial, sans-serif;
         }
         footer p {
